--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -2053,6 +2053,11 @@ input[type="text"].select2-search__field {
   margin-left: 5px;
 }
 
+.ast-field-settings-modal .customize-control-ast-slider .ast-slider-reset {
+  right: -18px;
+  top: -32px;
+}
+
 .customize-control-ast-sortable ul.ui-sortable {
   cursor: default;
 }
